--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="box">
             <img class="mainimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/hero-banner/Cake-banner.jpg">
         </div>
-        <h1>Celebration special ocassion?</h1>
+        <h1>Celebrating special ocassion?</h1>
         <div class="box">
             <div class="small1">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/By-Occasions/birthday.jpg">
