--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
             margin-top: 5px;
             font-style:oblique;
         }
+
+        .details{
+            border: 1px solid #c78b36;
+            width: 450px;
+            height: 200px;
+            margin: auto;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            
+        }
     </style>
 </head>
 <body>
@@ -70,7 +80,7 @@
         <div class="box">
             <img class="mainimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/hero-banner/Cake-banner.jpg">
         </div>
-        <h1>Celebrating special ocassion?</h1>
+        <h1 style="margin-top:15px; margin-bottom:-20px">Celebrating special ocassion?</h1>
         <div class="box">
             <div class="small1">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/By-Occasions/birthday.jpg">
@@ -86,9 +96,9 @@
             </div>
         </div>
 
-        <h1>Choose Your Favourite Flavour</h1>
+        <h1 style="margin-top:20px; margin-bottom:-20px">Choose Your Favourite Flavour</h1>
 
-        <div class="box">
+        <div class="box" >
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/chocolate-cake.jpg">
                 <h2 class="smlcon">Chocolate cake</h2>
@@ -106,7 +116,7 @@
                 <h2 class="smlcon">Butterscotch Cakes</h2>
             </div>
         </div>
-        <div class="box">
+        <div class="box" >
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/black-forest.jpg">
                 <h2 class="smlcon">Black Forest</h2>
@@ -124,10 +134,13 @@
                 <h2 class="smlcon">Vanilla Cake</h2>
             </div>
         </div>
-        <h2 style="margin-top:100px; margin-bottom:-20px">Contact details</h2>
-        <div style=" color: black;"><h2>Dipti Rathi</h2></div>
-        <div style="margin-top: -15px;color: black;"><h3>8003851865</h3></div>
-        <div style="margin-top: -15px;color: black;"><p>Near Maheshwari Samaj Tivari (Jodhpur)</p></div>
+        <div class="details">
+            <h2  style="font-size: 40px; margin-bottom: -15px;">Contact details</h2>
+            <div style=" color: black;"><h2>Dipti Rathi</h2></div>
+            <div style="margin-top: -15px;color: black;"><h3>8003851865</h3></div>
+            <div style="margin-top: -15px;color: black;"><p>Near Maheshwari Samaj Tivari (Jodhpur)</p></div>
+        </div>
+   
     </div>
 </body>
 </html>
