--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         .container{
 
-            height:1450px;
+            height:145git0px;
             width: 1300px;
             margin:auto;
             text-align: center;
@@ -76,6 +76,12 @@
 </head>
 <body>
     <div class="container">
+        <div class="details">
+            <h2  style="font-size: 40px; margin-bottom: -15px;">Contact details</h2>
+            <div style=" color: black;"><h2>Dipti Rathi</h2></div>
+            <div style="margin-top: -15px;color: black;"><h3>8003851865</h3></div>
+            <div style="margin-top: -15px;color: black;"><p>Near Maheshwari Samaj Tivari (Jodhpur)</p></div>
+        </div>
         
         <div class="box">
             <img class="mainimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/hero-banner/Cake-banner.jpg">
@@ -134,12 +140,7 @@
                 <h2 class="smlcon">Vanilla Cake</h2>
             </div>
         </div>
-        <div class="details">
-            <h2  style="font-size: 40px; margin-bottom: -15px;">Contact details</h2>
-            <div style=" color: black;"><h2>Dipti Rathi</h2></div>
-            <div style="margin-top: -15px;color: black;"><h3>8003851865</h3></div>
-            <div style="margin-top: -15px;color: black;"><p>Near Maheshwari Samaj Tivari (Jodhpur)</p></div>
-        </div>
+       
    
     </div>
 </body>
