--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             <div style="margin-top: -15px;color: black;"><h3>8003851865</h3></div>
             <div style="margin-top: -15px;color: black;"><p>Near Maheshwari Samaj Tivari (Jodhpur)</p></div>
         </div>
+
+        <h1>Happiness of ours lies in your Happiness</h1>
         
         <div class="box">
             <img class="mainimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/hero-banner/Cake-banner.jpg">
