--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         .container{
 
-            height:145git0px;
+            height:1450px;
             width: 1300px;
             margin:auto;
             text-align: center;
@@ -110,6 +110,8 @@
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/chocolate-cake.jpg">
                 <h2 class="smlcon">Chocolate cake</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">350/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">650/One KG</h4>
             </div>
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/red-velvate.jpg">
@@ -118,10 +120,15 @@
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/truffle.jpg">
                 <h2 class="smlcon">Truffle Cake</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">450/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">850/One KG</h4>
+
             </div>
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/butter-s-cake.jpg">
                 <h2 class="smlcon">Butterscotch Cakes</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">350/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">650/One KG</h4>
             </div>
         </div>
         <div class="box" >
@@ -136,6 +143,8 @@
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/pineapple.jpg">
                 <h2 class="smlcon">pineapple Cake</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">350/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">650/One KG</h4>
             </div>
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/vanilla.jpg">
