--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/vanilla.jpg">
                 <h2 class="smlcon">Vanilla Cake</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">350/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">650/One KG</h4>
             </div>
         </div>
        
