--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         .details{
             border: 1px solid #c78b36;
-            width: 450px;
-            height: 200px;
+            width: 500px;
+            height: 300px;
             margin: auto;
             margin-top: 50px;
             margin-bottom: 50px;
@@ -81,7 +81,9 @@
             <h2  style="font-size: 40px; margin-bottom: -15px;">Contact details</h2>
             <div style=" color: black;"><h2>Dipti Rathi</h2></div>
             <div style="margin-top: -15px;color: black;"><h3>8003851865</h3></div>
-            <div style="margin-top: -15px;color: black;"><p>Near Maheshwari Samaj Tivari (Jodhpur)</p></div>
+            <div style="margin-top: -15px;color: black;"><h5>You Can customise your cake, custmosiation will be charged accordingly</h5></div>
+            <div style="margin-top: -15px;color: black;"><p>[Near Maheshwari Samaj Tivari (Jodhpur)]</p></div>
+            
         </div>
 
         <h1>Happiness of ours lies in your Happiness</h1>
