--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
         .details{
             border: 1px solid #c78b36;
             width: 500px;
-            height: 300px;
+            height: 260px;
             margin: auto;
             margin-top: 50px;
             margin-bottom: 50px;
+            padding-top: -15px;
             
         }
 
@@ -87,6 +88,7 @@
         </div>
 
         <h1>Happiness of ours lies in your Happiness</h1>
+        <h3 style="color:black ; margin-top:-15px"> Health is precious, Never  Compromise in health, Eat Home-made Cake</h3>
         
         <div class="box">
             <img class="mainimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/hero-banner/Cake-banner.jpg">
@@ -120,6 +122,8 @@
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/red-velvate.jpg">
                 <h2 class="smlcon">Red Valvet</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">500/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">1000/One KG</h4>
             </div>
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/truffle.jpg">
@@ -139,10 +143,14 @@
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/black-forest.jpg">
                 <h2 class="smlcon">Black Forest</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">400/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">750/One KG</h4>
             </div>
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/fresh-fruit.jpg">
                 <h2 class="smlcon">Fresh Fruit Cake</h2>
+                <h4 style="margin-top: -10px; margin-bottom: 14px; color: black; font-size: 20px;">400/half KG</h4>
+                <h4 style="margin-top: -10px; color: black; font-size: 20px;">750/One KG</h4>
             </div>
             <div class="small">
                 <img class="smlimg" src="https://www.fnp.com/assets/images/custom/cake-micro-2022/Cakes-By-Flavour/pineapple.jpg">
